# viecpro_import_app

./: .gitignore  README.md  access_import_script.py  apis_core  chain_tests.py  components.py  config.py  file_template.html  funktionenliste.pkl  hardcode_cfg.py  inst_template.html  main.py  manage.py  mybash.sh  pyproject.toml  render_file.css  render_to_file.py  requirements.txt  sample_import.py  todo_import_fix.md
apis/: urls.py
apis/settings/: base.py  viecpro_testing.py
data/: 3_HSV-angepasst-IMPORT.xlsx  EXCEL-ACCESS_Kürzel-Titel-Orden-2021-01-28.xlsx  Kürzel-Hofstaate-EX-ACC-2021-02-08.xlsx  Kürzel-Hofstaate-EX-ACC-2021-06-02.xlsx  Kürzel-Ämter-ACC-EX-2021-02-08.xlsx  current_paths.json  duplicate_indices.pkl  viecpro_HSV_0.jsonl  viecpro_HZAB_funktion_0.jsonl  whitespace_funcs.pkl
data/access_data/: Access_Export_Personenformular.xlsx
django_settings/: base.py  viecpro_testing.py
file_sets/: FileSet.py
file_sets/working_sets/: SETS.py  hofstaate.py
import_src/: __init__.py  create_database_objects.py  exclude_manually_corrected_entries.py  file_processing.py  output_control.txt  process_row.py
import_src/access_import/: access_import_script.py  access_nlp.py  create_dataframes.py  import_access_jsonlines.py  import_setup.py
import_src/import_logger/: import_logger_config.py
import_src/logfiles/: log_main_2021-05-19_07:02:36.txt  log_main_2021-05-19_07:04:15.txt  (+43 more)
nlp_pipeline_components/: build_pipeline.py
pipeline/: file_processing.py
settings/: settings_template.yaml
tests/: test_components.py  test_extraction.py  test_hsv.py
(+141 files in other folders)
