[tool.poetry]
name = "viecpro_import_app"
version = "0.1.0"
description = "Import app for Viecpro using CI/CD"
authors = ["Matthias Schlögl <m.schloegl@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.6"
apis-core = "^0.16.3"
spacy = "==2.3.5"
pandas = "0.25.3"
dj-database-url = "^0.5.0"
mysqlclient = "^2.0.3"
xlrd = "^2.0.1"
openpyxl = "^3.0.7"

[tool.poetry.dev-dependencies]
dephell = "^0.8.3"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
